<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zlb.demos.androiddemos.material.MaterialT2Activity">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/m_trans_image2_left"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        fresco:viewAspectRatio="1.25"
        fresco:actualImageScaleType="fitXY"
        android:transitionName="@string/trans_image_left"
        />

    <ImageView
        android:id="@+id/m_trans_image2_right"
        android:layout_width="200dp"
        android:layout_height="175dp"
        android:src="@drawable/image"
        android:transitionName="@string/trans_image_right"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="112dp"
        android:text="test"
        android:gravity="center"
        android:transitionName="@string/trans_btn"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
