<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zlb.demos.androiddemos.material.MaterialTransitionActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/m_trans_image_left"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            fresco:viewAspectRatio="1.25"
            fresco:actualImageScaleType="fitXY"
            android:transitionName="@string/trans_image_left"
            />

        <SimpleDraweeView
            android:id="@+id/m_trans_image_right"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/image"
            android:transitionName="@string/trans_image_right"
            android:scaleType="fitXY"
            />
    </LinearLayout>


    <Button
        android:id="@+id/m_trans_btn"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:text="test"
        android:gravity="center"
        android:transitionName="@string/trans_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/m_together"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:text="together"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>
